# star

./: AGENTS.md  Dockerfile  IMPLEMENTATION_COMPARISON.md  README.md  docker-compose.yml  nginx.conf
backend/python_backend/: .env.example  .gitignore  Dockerfile  MIGRATION_SUMMARY.md  README.md  STARTUP_GUIDE.md  alembic.ini  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  start.bat  test_server.py  test_setup.py
backend/python_backend/app/api/endpoints/: __init__.py  children.py  rewards.py  stars.py
backend/python_backend/app/core/: database.py  logging.py
backend/python_backend/app/models/: child.py  reward.py  star_record.py
backend/python_backend/app/schemas/: __init__.py  reward.py
docs/: API接口文档.md  README.md  前端功能文档.md  后端功能文档.md  数据分析与图表功能.md  数据库初始化脚本.md  数据库设计文档.md  用户认证与权限管理.md  管理后台功能设计.md  部署指南.md  项目功能概述.md
frontend/: pnpm-lock.yaml
frontend/src/api/: stars.ts
frontend/src/components/: StarModal.vue
python_backend/: .env.example  FIXES_APPLIED.md  main.py  migrate_db.py  start.sh  start_server.py  test_complete_features.py
python_backend/alembic/: env.py
python_backend/app/api/endpoints/: children.py  rewards.py  stars.py
python_backend/app/core/: config.py  database.py  logging.py
python_backend/app/models/: __init__.py  child.py  reward.py
python_backend/app/schemas/: child.py  reward.py  star.py
